Fix footer spacing.

--- a/src/app/app.global.scss
+++ b/src/app/app.global.scss
@@ -31,3 +31,5 @@ $screen-width-monitor: 1824px;
 // Sizes
 $header-bar-height: 4.5rem;
 $header-bar-image-max-height: calc($header-bar-height - 0.3rem);
+$footer-height: 2.7rem;
+$footer-height-offet: 3.5rem;
