--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,3 +1,7 @@
 .appSpacer {
     flex: 1 1 auto;
 }
+
+.appMain {
+    min-height: 100%;
+}
